tests/parser/fail/assign-to-super.som
"test:
fail-message:
  - contains: assign
  - contains: super
"

AssignToSuper = (
  run = (
    super := 42.
  )
)
